* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.0-0
- Added missing simp-pki dependency to metadata.json
- Use ``generate_pem_hash_links`` option of pki_cert_sync to allow
  the gitlab application to manage the certificate hash links.
  ``gitlab reconfigure`` generates those hash links.
- Added manage_package and package_ensure parameters to simp_gitlab
- Switched from vshn/gitlab 1.13.3 to its replacement puppet/gitlab
  3.0.2 and reworked the manifests, as appropriate, to work with the
  newer module.
- Updated the upper bound of stdlib to < 6.0.0
- Updated a URL in the README.md

* Tue Nov 06 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.4-0
- Add explicit support for Oracle Linux
- Update badges in README.md

* Wed Oct 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.3.4-0
- Add explicit support for Puppet 5

* Fri Oct 19 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.3.4-0
- Updated assets and fixed a setting in the acceptance test
  so test would run under puppet 5

* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 0.3.4-0
- Updated $app_pki_external_source to accept any string.  This matches the functionality
  of pki::copy.

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.4-0
- Drop Hiera 4 support

* Fri Jul 13 2018 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.3
- Disable usage ping

* Thu Jun 14 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.3.2
- Update systemd fixtures and CI assets

* Tue May 15 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.2
- Expand the range of the augeasproviders_ssh module dependency
  to allow 3.x versions.

* Wed Mar 28 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 0.3.1
- Updated README to note that authorized key files need to be copied
  when upgrading from version 0.2.0.

* Wed Feb 28 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.3.0
- Drop support for CentOS 6 in order to cleanly solve an intermittent