@@ -1,3 +1,8 @@
+* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 0.5.0-0
+- Drop Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.0-0
 - Added missing simp-pki dependency to metadata.json
 - Use ``generate_pem_hash_links`` option of pki_cert_sync to allow
